Index.html and styles.css updated.

--- a/Styles.css
+++ b/Styles.css
@@ -53,10 +53,13 @@
 .Games {
     background-color: orange;
     color: black;
-    font-size: 110px;
+    font-size: 110%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
+ .Games:hover {
+ font-size: xx-large;
+ background-color: yellow;
+ }
 .container {
     display: flex;
     justify-content: center;
